--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,7 @@
     <title>MyWebSetup</title>
   </head>
   <body>
-    <h2>Before</h2>
-    <!-- <br /> -->
+    <%- include('../partials/header.ejs')%>
     <%- body%>
-    <!-- <br /> -->
-    <h2>After</h2>
   </body>
 </html>
