made a post api that saves data from frountend to backend database

--- a/views/authers/autherNew.ejs
+++ b/views/authers/autherNew.ejs
@@ -1,3 +1,6 @@
-<h2>
-    New Auther
-</h2>
+<h2>New Auther</h2>
+<form action="/authers" method="post">
+  <%- include('../partials/formFields.ejs')%>
+  <a href="/authers">Cancel</a>
+  <button type="submit">Create</button>
+</form>
