--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,6 +7,7 @@
   </head>
   <body>
     <%- include('../partials/header.ejs')%>
+    <%- include('../partials/errorMsg.ejs')%>
     <%- body%>
   </body>
 </html>
