added a search option for searching the results

--- a/views/authers/autherIndex.ejs
+++ b/views/authers/autherIndex.ejs
@@ -1,7 +1,7 @@
 <h2>Search Auther</h2>
 <form action="/authers" method="get">
-  <label for="">Name</label>
-  <input type="search" name="name" id="" />
+  <label for="autherName">Name</label>
+  <input type="search" name="autherName" id="autherName" value="<%= searchOptions.name%>" />
   <button type="submit">Search</button>
 </form>
 <br />
