--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
         <ul>
             <li><a href="/authers/">Authers</a></li>
             <li><a href="/authers/new">Add Authers</a></li>
+            <li><a href="/books/">Books</a></li>
+            <li><a href="/books/new">Add books</a></li>
         </ul>
     </nav>
 </header>
