made ejs for books making form for adding books title authes option added to code base

--- a/views/authers/autherIndex.ejs
+++ b/views/authers/autherIndex.ejs
@@ -5,6 +5,6 @@
   <button type="submit">Search</button>
 </form>
 <br />
-<% authersList.forEach(element => {%>
-    <div><%= element.name %></div>
+<% authersList.forEach(auther => {%>
+    <div><%= auther.name %></div>
 <% }); %>
