--- a/views/authers/autherNew.ejs
+++ b/views/authers/autherNew.ejs
@@ -1,6 +1,6 @@
 <h2>New Auther</h2>
 <form action="/authers" method="post">
-  <%- include('../partials/formFields.ejs')%>
+  <%- include('./auther_formFields.ejs')%>
   <a href="/authers">Cancel</a>
   <button type="submit">Create</button>
 </form>
