--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyWebSetup</title>
+    <style>
+      body{
+        color: rgb(146, 146, 146);
+        background-color: rgb(0, 0, 0);
+      }
+      a{
+        color: rgb(238, 0, 0);
+      }
+    </style>
   </head>
   <body>
     <%- include('../partials/header.ejs')%>
