--- a/views/books/books_formFields.ejs
+++ b/views/books/books_formFields.ejs
@@ -1,17 +1,44 @@
-<label for="">Title:</label>
-<input type="text" name="title" id="" value="<%= bookList.title %>" />
+<div>
+  <label for="">Title:</label>
+  <input type="text" name="title" id="" value="<%= book.title %>" />
+</div>
 
-<label for="">Author</label>
-<select name="author" id="">
-  <option selected disabled value="">List of authers</option>
-  <% authersList.forEach(author => { %> <% if (author.id === bookList.author) {
-  %>
-  <option  label="<%= author.name %>"><%= author.id %></option>
-  <% } else { %>
-  <option label="<%= author.name %>"><%= author.id %></option>
-  <% } %> <% }); %>
-</select>
-<label for="">Auther not listed:</label>
-<a href="/authers/new">Add auther</a>
-<br />
-<label for="">Publish Date</label>
+<div>
+  <label for="">Author</label>
+  <select name="author" id="">
+    <option selected disabled value="">List of authers</option>
+    <% authersList.forEach(author => { %> 
+    <% if (author.id === book.author) {%>
+    <option label="<%= author.name %>"><%= author.id %></option>
+    <% } else { %>
+    <option label="<%= author.name %>"><%= author.id %></option>
+    <% } %> <% }); %>
+  </select>
+  <label for="">Auther not listed:</label>
+  <a href="/authers/new">Add auther</a>
+</div>
+
+<div>
+  <label for="">Publish Date:</label>
+  <input
+    type="date"
+    name="publishDate"
+    id=""
+    value="<%book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0]%> "
+  />
+</div>
+
+<div>
+  <label for="">Page Count:</label>
+  <input type="number" name="pageCount" id="" value="<%book.pageCount%>" min="1">
+</div>
+
+<div>
+  <label for="">Cover:</label>
+  <input type="file" name="cover" id="">
+</div>
+
+<div>
+  <label for="">Description:</label>
+  <textarea name="description" id="" ><% book.description %></textarea>
+</div>
