Adding hof books added to code base

--- a/views/books/bookNew.ejs
+++ b/views/books/bookNew.ejs
@@ -1,5 +1,5 @@
 <h2>New Book</h2>
-<form action="/books" method="post">
+<form action="/books" method="post" enctype="multipart/form-data">
     <%- include('./books_formFields.ejs')%>
     <a href="/books">Cancel</a>
     <button type="submit">Create</button>
