If there was book schema error the file was getting saved to FS made a function that removes error book cover

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyWebSetup</title>
     <style>
-      body{
+      body {
         color: rgb(146, 146, 146);
         background-color: rgb(0, 0, 0);
       }
-      a{
+      a {
         color: rgb(238, 0, 0);
       }
     </style>
   </head>
   <body>
-    <%- include('../partials/header.ejs')%>
-    <%- include('../partials/errorMsg.ejs')%>
-    <%- body%>
+    <%- include('../partials/header.ejs')%> <%-
+    include('../partials/errorMsg.ejs')%> <%- body%>
   </body>
 </html>
