An error occured regarding coverImagePath trying to resolve it

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <div class="logo"><a href="/">MyDynamic</a></div>
+    <div class="logo"><a href="/">MyLibrary</a></div>
     <nav>
         <ul>
             <li><a href="/authers/">Authers</a></li>
