--- a/views/books/books_formFields.ejs
+++ b/views/books/books_formFields.ejs
@@ -45,5 +45,5 @@
 
 <div>
   <label for="">Description:</label>
-  <textarea name="description" id=""><% book.description %></textarea>
+  <textarea name="description" id="" value="<% book.description %>"></textarea>
 </div>
