--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyWebSetup</title>
+    <title>MyLibrary</title>
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link
       href="https://unpkg.com/filepond@^4/dist/filepond.css"
