--- a/views/authers/autherIndex.ejs
+++ b/views/authers/autherIndex.ejs
@@ -1,10 +1,20 @@
 <h2>Search Auther</h2>
 <form action="/authers" method="get">
   <label for="autherName">Name</label>
-  <input type="search" name="autherName" id="autherName" value="<%= searchOptions.name%>" />
+  <input
+    type="search"
+    name="autherName"
+    id="autherName"
+    value="<%= searchOptions.autherName%>"
+  />
   <button type="submit">Search</button>
 </form>
 <br />
 <% authersList.forEach(auther => {%>
-    <div><%= auther.name %></div>
+<div>
+  <div><%= auther.name %></div>
+  <a href="/authers/<%= auther.id %>">View</a>
+  <a href="/authers/<%= auther.id %>/edit">Edit</a>
+  <%- include('../partials/deleteForm.ejs', {url:`/authers/${auther.id}`}) %>
+</div>
 <% }); %>
