Added books show into code base and made a bookListShow.ejs in partials to make book cover a link in home page and book page

--- a/views/books/bookIndex.ejs
+++ b/views/books/bookIndex.ejs
@@ -28,17 +28,8 @@
     />
   </div>
   <div>
-    <input type="submit" value="Search">
+    <input type="submit" value="Search" />
   </div>
 </form>
 <br />
-<div>
-  <% booksList.forEach(book => {%>
-  <img
-    height="150"
-    width="90"
-    alt="Book Cover"
-    src="<%= book.coverImagePath %>"
-  />&nbsp&nbsp&nbsp
-  <% }); %>
-</div>
+<%- include('../partials/bookListShow.ejs') %>
