--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,2 @@
 <h2>Recently Added</h2>
-<div>
-  <% booksList.forEach(book => {%>
-  <img
-    height="150"
-    width="90"
-    alt="Book Cover"
-    src="<%= book.coverImagePath %>"
-  />&nbsp&nbsp&nbsp <% }); %>
-</div>
+<%- include('./partials/bookListShow.ejs') %>
