--- a/views/books/bookShow.ejs
+++ b/views/books/bookShow.ejs
@@ -29,3 +29,8 @@
     </table>
   </div>
 </div>
+<div>
+  <a href="/books/<%= bookData.id %>/edit">Edit</a>
+  <%- include('../partials/deleteForm.ejs',{url:`/books/${bookData.id}`}) %>
+  <a href="/authers/<%= bookData.auther.id %>/">View Author</a>
+</div>
