Adding style to website page color and header style added to codebase

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,4 @@
 <h2>Recently Added</h2>
-<%- include('./partials/bookListShow.ejs') %>
+<div class="booklist">
+    <%- include('./partials/bookListShow.ejs') %>
+</div>
