--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyLibrary</title>
+    <link rel="stylesheet" href="/main.css" />
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link
       href="https://unpkg.com/filepond@^4/dist/filepond.css"
@@ -13,24 +14,29 @@
       href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css"
       rel="stylesheet"
     />
-    <script defer src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
-    <script defer src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
-    <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
+    <script
+      defer
+      src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"
+    ></script>
+    <script
+      defer
+      src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"
+    ></script>
+    <script
+      defer
+      src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"
+    ></script>
     <script defer src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
-    <style>
-      body {
-        color: rgb(146, 146, 146);
-        background-color: rgb(0, 0, 0);
-      }
-      a {
-        color: rgb(238, 0, 0);
-      }
-    </style>
   </head>
   <body>
-    <%- include('../partials/header.ejs')%> <%-
-    include('../partials/errorMsg.ejs')%> <%- body%>
+    <div class="container">
+      <%- include('../partials/header.ejs')%>
+      <div class="contentBody">
+        <%- include('../partials/errorMsg.ejs')%> 
+        <%- body%>
+      </div>
+    </div>
   </body>
 </html>
