--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <header>
-    <div class="logo"><a href="/">MyLibrary</a></div>
-    <nav>
-        <ul>
-            <li><a href="/authers/">Authers</a></li>
-            <li><a href="/authers/new">Add Authers</a></li>
-            <li><a href="/books/">Books</a></li>
-            <li><a href="/books/new">Add books</a></li>
-        </ul>
-    </nav>
+  <div><a href="/" class="logo">MyLibrary</a></div>
+  <nav class="header-nav">
+    <ul>
+      <li class="header-link"><a href="/authers/">Authers</a></li>
+      <li class="header-link"><a href="/authers/new">Add Authers</a></li>
+      <li class="header-link"><a href="/books/">Books</a></li>
+      <li class="header-link"><a href="/books/new">Add books</a></li>
+    </ul>
+  </nav>
 </header>
