--- a/public/main.css
+++ b/public/main.css
@@ -4,6 +4,8 @@
 
 @import url(shared/header.css);
 
+@import url(shared/buttons.css);
+
 :root {
   /* font-family: "Nunito Sans", sans-serif; */
   font-family: "Rubik", sans-serif;
