--- a/views/partials/deleteForm.ejs
+++ b/views/partials/deleteForm.ejs
@@ -1,3 +1,3 @@
 <form action="<%= url %>?_method=DELETE" method="post">
-  <input type="submit" value="Delete" />
+  <input type="submit" value="Delete" class="btn btn-danger"/>
 </form>
