--- a/views/authers/autherShow.ejs
+++ b/views/authers/autherShow.ejs
@@ -1,7 +1,10 @@
 <h2><%= autherData.name %></h2>
-<a href="/authers/<%= autherData.id  %>/edit">Edit</a>
-<%- include('../partials/deleteForm.ejs', {url:`/authers/${autherData.id}`}) %>
+<div class="btn-row">
+  <a class="btn btn-primary" href="/authers/<%= autherData.id  %>/edit">Edit</a>
+  <%- include('../partials/deleteForm.ejs', {url:`/authers/${autherData.id}`})
+  %>
+</div>
 <% if (booksByAuther.length > 0) { %>
-<h2>Books by auther</h2>
+<h2 class="page-header">Books by auther</h2>
 <%- include('../partials/bookListShow.ejs',{booksList: booksByAuther}) %> <% }
 %>
