--- a/views/books/bookEdit.ejs
+++ b/views/books/bookEdit.ejs
@@ -1,6 +1,8 @@
 <h2>Edit Book</h2>
 <form action="/books/<%= book.id  %>?_method=PUT" method="post">
   <%- include('./books_formFields.ejs')%>
-  <a href="/books">Cancel</a>
-  <button type="submit">Update</button>
+  <div class="form-row form-row-end btn-row">
+    <a href="/books" class="btn btn-danger">Cancel</a>
+    <button class="btn btn-primary" type="submit">Create</button>
+  </div>
 </form>
