--- a/views/books/bookIndex.ejs
+++ b/views/books/bookIndex.ejs
@@ -1,34 +1,40 @@
-<h2>Search Books</h2>
+<h2 class="page-header">Search Books</h2>
 <form action="/books" method="get">
-  <div>
-    <label for="">Title:</label>
-    <input
-      type="search"
-      name="bookTitle"
-      id="bookTitle"
-      value="<%=searchOptions.bookTitle%>"
-    />
+  <div class="form-row">
+    <div class="form-item">
+      <label for="">Title:</label>
+      <input
+        type="search"
+        name="bookTitle"
+        id="bookTitle"
+        value="<%=searchOptions.bookTitle%>"
+      />
+    </div>
   </div>
-  <div>
-    <label for="">Published Before:</label>
-    <input
-      type="date"
-      name="publishedBefore"
-      id="publishedBefore"
-      value="<%=searchOptions.publishedBefore%>"
-    />
+
+  <div class="form-row">
+    <div class="form-item">
+      <label for="">Published Before:</label>
+      <input
+        type="date"
+        name="publishedBefore"
+        id="publishedBefore"
+        value="<%=searchOptions.publishedBefore%>"
+      />
+    </div>
+    <div class="form-item">
+      <label for="">Published After:</label>
+      <input
+        type="date"
+        name="publishedAfter"
+        id="publishedAfter"
+        value="<%=searchOptions.publishedAfter%>"
+      />
+    </div>
   </div>
-  <div>
-    <label for="">Published After:</label>
-    <input
-      type="date"
-      name="publishedAfter"
-      id="publishedAfter"
-      value="<%=searchOptions.publishedAfter%>"
-    />
-  </div>
-  <div>
-    <input type="submit" value="Search" />
+
+  <div class="form-row form-row-end">
+    <input type="submit" value="Search" class="btn btn-primary" />
   </div>
 </form>
 <br />
