--- a/public/main.css
+++ b/public/main.css
@@ -6,6 +6,7 @@
 
 @import url(shared/buttons.css);
 
+@import url(shared/form.css);
 :root {
   /* font-family: "Nunito Sans", sans-serif; */
   font-family: "Rubik", sans-serif;
@@ -49,8 +50,12 @@ a:hover {
 
 /* ----COntentBoday */
 .contentBody {
+  margin-top: 5px;
   padding: 5px 10px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .contentBody h2 {
