--- a/views/authers/autherEdit.ejs
+++ b/views/authers/autherEdit.ejs
@@ -1,6 +1,8 @@
 <h2>Edit Auther</h2>
 <form action="/authers/<%= auther.id%>?_method=PUT" method="post">
   <%- include('./auther_formFields.ejs')%>
-  <a href="/authers/<%= auther.id %>">Cancel</a>
-  <button type="submit">Update</button>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-danger" href="/authers/<%= auther.id %>">Cancel</a>
+    <button class="btn btn-primary" type="submit">Update</button>
+  </div>
 </form>
