--- a/views/authers/auther_formFields.ejs
+++ b/views/authers/auther_formFields.ejs
@@ -1,2 +1,6 @@
-<label for="">Name:</label>
-<input type="text" name="name" value="<%= auther.name %>" />
+<div class="form-row">
+  <div class="form-item">
+    <label for="">Name:</label>
+    <input type="text" name="name" value="<%= auther.name %>" />
+  </div>
+</div>
