--- a/views/books/bookNew.ejs
+++ b/views/books/bookNew.ejs
@@ -1,6 +1,8 @@
 <h2>New Book</h2>
 <form action="/books" method="post">
-    <%- include('./books_formFields.ejs')%>
-    <a href="/books">Cancel</a>
-    <button type="submit">Create</button>
+  <%- include('./books_formFields.ejs')%>
+  <div class="form-row form-row-end btn-row">
+    <a href="/books" class="btn btn-danger">Cancel</a>
+    <button class="btn btn-primary" type="submit">Create</button>
+  </div>
 </form>
