completted the style for book detail show page

--- a/public/main.css
+++ b/public/main.css
@@ -7,6 +7,8 @@
 @import url(shared/buttons.css);
 
 @import url(shared/form.css);
+
+@import url(shared/book.css);
 :root {
   /* font-family: "Nunito Sans", sans-serif; */
   font-family: "Rubik", sans-serif;
@@ -64,4 +66,8 @@ a:hover {
 
 .booklist {
   display: grid;
+}
+
+.error-msg {
+  color: hsl(var(--color-danger-hue), 100%, 50%);
 }
