--- a/views/books/bookIndex.ejs
+++ b/views/books/bookIndex.ejs
@@ -38,4 +38,4 @@
   </div>
 </form>
 <br />
-<%- include('../partials/bookListShow.ejs') %>
+<%- include('../partials/bookListShow.ejs',{large:true}) %>
