--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
 <h2>Recently Added</h2>
 <div class="booklist">
-    <%- include('./partials/bookListShow.ejs') %>
+  <%- include('./partials/bookListShow.ejs',{large:true}) %>
 </div>
