completted the style for book cover preview filepond and project complete

--- a/views/books/books_formFields.ejs
+++ b/views/books/books_formFields.ejs
@@ -48,7 +48,7 @@
 <div class="form-row">
   <div class="form-item form-item-no-grow">
     <label for="" class="filepond_label">Cover:</label>
-    <input type="file" class="filepond" name="cover" id="" />
+    <input type="file" class="filepond book-cover" name="cover" id="" />
   </div>
 
   <div class="form-item">
