--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyLibrary</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link id="main.css" rel="stylesheet" href="/main.css" />
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link
       href="https://unpkg.com/filepond@^4/dist/filepond.css"
@@ -34,8 +34,7 @@
     <div class="container">
       <%- include('../partials/header.ejs')%>
       <div class="contentBody">
-        <%- include('../partials/errorMsg.ejs')%> 
-        <%- body%>
+        <%- include('../partials/errorMsg.ejs')%> <%- body%>
       </div>
     </div>
   </body>
